k8s/monitoring/promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      serviceAccountName: promtail
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
      containers:
        - name: promtail
          image: grafana/promtail:latest
          imagePullPolicy: IfNotPresent
          args:
            - -config.file=/etc/promtail/promtail-config.yml
          ports:
            - containerPort: 9080
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
            - name: pods-logs
              mountPath: /var/log/pods
              readOnly: true
            - name: containers-logs
              mountPath: /var/log/containers
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: promtail-config
        - name: pods-logs
          hostPath:
            path: /var/log/pods
        - name: containers-logs
          hostPath:
            path: /var/log/containers
